; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/netfpga10g/nf10bmac/extr_if_nf10bmac.c_nf10bmac_init_locked.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/netfpga10g/nf10bmac/extr_if_nf10bmac.c_nf10bmac_init_locked.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nf10bmac_softc = type { i32, %struct.ifnet*, i32, i32 }
%struct.ifnet = type { i32, i32 }

@IFF_DRV_RUNNING = common dso_local global i32 0, align 4
@ETHER_ADDR_LEN = common dso_local global i32 0, align 4
@IFF_DRV_OACTIVE = common dso_local global i32 0, align 4
@NF10BMAC_FLAGS_LINK = common dso_local global i32 0, align 4
@LINK_STATE_UP = common dso_local global i32 0, align 4
@IFCAP_POLLING = common dso_local global i32 0, align 4
@hz = common dso_local global i32 0, align 4
@nf10bmac_tick = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.nf10bmac_softc*)* @nf10bmac_init_locked to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @nf10bmac_init_locked(%struct.nf10bmac_softc* %0) #0 {
  %2 = alloca %struct.nf10bmac_softc*, align 8
  %3 = alloca %struct.ifnet*, align 8
  %4 = alloca i32*, align 8
  store %struct.nf10bmac_softc* %0, %struct.nf10bmac_softc** %2, align 8
  %5 = load %struct.nf10bmac_softc*, %struct.nf10bmac_softc** %2, align 8
  %6 = call i32 @NF10BMAC_LOCK_ASSERT(%struct.nf10bmac_softc* %5)
  %7 = load %struct.nf10bmac_softc*, %struct.nf10bmac_softc** %2, align 8
  %8 = getelementptr inbounds %struct.nf10bmac_softc, %struct.nf10bmac_softc* %7, i32 0, i32 1
  %9 = load %struct.ifnet*, %struct.ifnet** %8, align 8
  store %struct.ifnet* %9, %struct.ifnet** %3, align 8
  %10 = load %struct.ifnet*, %struct.ifnet** %3, align 8
  %11 = getelementptr inbounds %struct.ifnet, %struct.ifnet* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = load i32, i32* @IFF_DRV_RUNNING, align 4
  %14 = and i32 %12, %13
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %16, label %17

16:                                               ; preds = %1
  br label %54

17:                                               ; preds = %1
  %18 = load %struct.nf10bmac_softc*, %struct.nf10bmac_softc** %2, align 8
  %19 = getelementptr inbounds %struct.nf10bmac_softc, %struct.nf10bmac_softc* %18, i32 0, i32 1
  %20 = load %struct.ifnet*, %struct.ifnet** %19, align 8
  %21 = call i32* @IF_LLADDR(%struct.ifnet* %20)
  store i32* %21, i32** %4, align 8
  %22 = load i32*, i32** %4, align 8
  %23 = load %struct.nf10bmac_softc*, %struct.nf10bmac_softc** %2, align 8
  %24 = getelementptr inbounds %struct.nf10bmac_softc, %struct.nf10bmac_softc* %23, i32 0, i32 3
  %25 = load i32, i32* @ETHER_ADDR_LEN, align 4
  %26 = call i32 @bcopy(i32* %22, i32* %24, i32 %25)
  %27 = load %struct.nf10bmac_softc*, %struct.nf10bmac_softc** %2, align 8
  %28 = call i32 @nf10bmac_stop_locked(%struct.nf10bmac_softc* %27)
  %29 = load %struct.nf10bmac_softc*, %struct.nf10bmac_softc** %2, align 8
  %30 = call i32 @nf10bmac_reset(%struct.nf10bmac_softc* %29)
  %31 = load %struct.nf10bmac_softc*, %struct.nf10bmac_softc** %2, align 8
  %32 = call i32 @nf10bmac_eat_packet_munch_munch(%struct.nf10bmac_softc* %31)
  %33 = load %struct.nf10bmac_softc*, %struct.nf10bmac_softc** %2, align 8
  %34 = call i32 @NF10BMAC_RX_INTR_ENABLE(%struct.nf10bmac_softc* %33)
  %35 = load i32, i32* @IFF_DRV_RUNNING, align 4
  %36 = load %struct.ifnet*, %struct.ifnet** %3, align 8
  %37 = getelementptr inbounds %struct.ifnet, %struct.ifnet* %36, i32 0, i32 0
  %38 = load i32, i32* %37, align 4
  %39 = or i32 %38, %35
  store i32 %39, i32* %37, align 4
  %40 = load i32, i32* @IFF_DRV_OACTIVE, align 4
  %41 = xor i32 %40, -1
  %42 = load %struct.ifnet*, %struct.ifnet** %3, align 8
  %43 = getelementptr inbounds %struct.ifnet, %struct.ifnet* %42, i32 0, i32 0
  %44 = load i32, i32* %43, align 4
  %45 = and i32 %44, %41
  store i32 %45, i32* %43, align 4
  %46 = load i32, i32* @NF10BMAC_FLAGS_LINK, align 4
  %47 = load %struct.nf10bmac_softc*, %struct.nf10bmac_softc** %2, align 8
  %48 = getelementptr inbounds %struct.nf10bmac_softc, %struct.nf10bmac_softc* %47, i32 0, i32 2
  store i32 %46, i32* %48, align 8
  %49 = load %struct.nf10bmac_softc*, %struct.nf10bmac_softc** %2, align 8
  %50 = getelementptr inbounds %struct.nf10bmac_softc, %struct.nf10bmac_softc* %49, i32 0, i32 1
  %51 = load %struct.ifnet*, %struct.ifnet** %50, align 8
  %52 = load i32, i32* @LINK_STATE_UP, align 4
  %53 = call i32 @if_link_state_change(%struct.ifnet* %51, i32 %52)
  br label %54

54:                                               ; preds = %17, %16
  ret void
}

declare dso_local i32 @NF10BMAC_LOCK_ASSERT(%struct.nf10bmac_softc*) #1

declare dso_local i32* @IF_LLADDR(%struct.ifnet*) #1

declare dso_local i32 @bcopy(i32*, i32*, i32) #1

declare dso_local i32 @nf10bmac_stop_locked(%struct.nf10bmac_softc*) #1

declare dso_local i32 @nf10bmac_reset(%struct.nf10bmac_softc*) #1

declare dso_local i32 @nf10bmac_eat_packet_munch_munch(%struct.nf10bmac_softc*) #1

declare dso_local i32 @NF10BMAC_RX_INTR_ENABLE(%struct.nf10bmac_softc*) #1

declare dso_local i32 @if_link_state_change(%struct.ifnet*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
